samples/_failures_safe/1761594106_a064c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35765d6c.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_35765d6c.c:174:26: error: missing terminating " character
  174 |     input[strcspn(input, "\n
      |                          ^~~
./samples/SAFE/__tmp_35765d6c.c:174:5: error: expected expression at end of input
  174 |     input[strcspn(input, "\n
      |     ^~~~~
./samples/SAFE/__tmp_35765d6c.c:174:5: error: expected declaration or statement at end of input
